// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render 1`] = `
<DocumentFragment>
  <div
    class="flex rounded-lg overflow-hidden bg-theme-warning"
  >
    <div
      class="sc-AxiKw cPQbnD flex items-center justify-center text-theme-warning bg-theme-warning-200"
    >
      <div
        class="sc-AxjAm bIZXgI"
        height="30"
        width="30"
      >
        <svg>
          alert-default.svg
        </svg>
      </div>
    </div>
    <div
      class="sc-AxirZ evPsEn flex-1 bg-theme-warning-100"
    />
  </div>
</DocumentFragment>
`;

exports[`Alert should render a large one 1`] = `
<div>
  <div
    class="flex rounded-lg overflow-hidden bg-theme-warning"
  >
    <div
      class="sc-AxiKw eRaQyX flex items-center justify-center text-theme-warning bg-theme-warning-200"
    >
      <div
        class="sc-AxjAm bIZXgI"
        height="30"
        width="30"
      >
        <svg>
          alert-default.svg
        </svg>
      </div>
    </div>
    <div
      class="sc-AxirZ iyxqHr flex-1 bg-theme-warning-100"
    />
  </div>
</div>
`;

exports[`Alert should render a small one 1`] = `
<div>
  <div
    class="flex rounded-lg overflow-hidden bg-theme-warning"
  >
    <div
      class="sc-AxiKw eEYCTT flex items-center justify-center text-theme-warning bg-theme-warning-200"
    >
      <div
        class="sc-AxjAm bIZXgI"
        height="30"
        width="30"
      >
        <svg>
          alert-default.svg
        </svg>
      </div>
    </div>
    <div
      class="sc-AxirZ dzRQiL flex-1 bg-theme-warning-100"
    />
  </div>
</div>
`;
